2000-07-19  Alan Modra  <alan@linuxcare.com.au>

	* gas/macros/macros.exp (test1): Run it for hppa*-*-linux*.
	(semi): Likewise.
	(strings): Don't run for hppa, except for hppa*-*-linux*.

	* gas/hppa/parse/linesepbug.s: Ensure we have whitespace before
	pseudos.

2000-07-18  Scott Bambrough  <scottb@netwinder.org>

        * gas/arm/inst.d: Fix expected results to match current assembler
        output.  Patch from Justin Seger <justin.m.seger@intel.com>.

2000-07-10  Alan Modra  <alan@linuxcare.com.au>

	* gas/vtable/vtable.exp: Disable test for hppa.

	* gas/hppa/reloc/reloc.exp (do_relocation_reduction_tests): Don't
	run test for any elf target.
	(applybug): Don't run test for linux.
	* gas/hppa/unsorted/unsorted.exp (do_common_text): Likewise.
	* gas/hppa/parse/parse.exp (linesepbug): Remove xfail
	(labelbug): xfail for hppa-linux.

	* gas/hppa/basic/{coprmem.s, fmemLRbug.s}: Add colons to labels.
	* gas/hppa/parse/{callinfobug.s, regpopbug.s}: Likewise.
	* gas/hppa/reloc/{applybug.s, funcrelocbug.s, longcall.s,
	r_no_reloc.s, reduce3.s}: Likewise.
	* gas/hppa/unsorted/common.s: Likewise.

2000-07-05  Nick Clifton  <nickc@cygnus.com>

	* gas/d30v/inst.d: Fix expected results to match current assembler
	output.
	* gas/d30v/bittest.l: Fix expected warning messages to match
	current assembler output.

2000-06-29  Kazu Hirata  <kazu@hxi.com>

	* gas/h8300/h8300.exp (do_h8300s_mac): Change the registers used
	in ldmac and stmac.
	* gas/h8300/macs.s: Likewise.

2000-06-27  Nick Clifton  <nickc@cygnus.com>

	* gas/d30v/bittest.l: Edit to match new warning messages produced
	by assembler.

2000-06-19  Timothy Wall  <twall@cygnus.com>

	* gas/macros/macros.exp: Avoid tests which are not useful on tic54x.
	* gas/all/gas.exp: Make adjustments for tic54x target.
	* gas/ieee-fp/x930509a.exp: Ditto.
	* gas/tic54x/*: New tests for tic54x.  NOTE: load page has been
	moved into the LMA and is not printed separately by objdump any
	longer.  This still needs to be tested.
	