@@ -27,5 +27,7 @@ case $target_triplet in {
 }
 
 if { ![istarget hppa*-*-*] || [istarget *-*-linux*] } {
+    # FIXME: Due to macro mishandling of ONLY_STANDARD_ESCAPES.
+    setup_xfail cris-*-*
     run_dump_test strings
 }
