@@ -1,3 +1,9 @@
+2000-07-20  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gas/all/gas.exp: Don't run floating-point tests on CRIS.
+	* gas/ieee-fp/x930509a.exp: Ditto.
+	* gas/macros/macros.exp: Mark strings test xfail for CRIS.
+
 2000-07-19  Alan Modra  <alan@linuxcare.com.au>
 
 	* gas/macros/macros.exp (test1): Run it for hppa*-*-linux*.
